feat: add launch feedback toast notifications (Refs #49)
Add toast notifications showing launch success/failure feedback when running programs.

Changes:
- Add StatusToast component with success/error/info styles
- Show toast on program launch from all entry points (ProgramView, ProgramsView, PinView, BottleView)
- Error toasts persist with dismiss button; success/info auto-dismiss after 3s
- Add accessibility support with localized labels
- Ensure thread-safe UI updates with MainActor

Refs #49

--- a/Whisky/Localizable.xcstrings
+++ b/Whisky/Localizable.xcstrings
@@ -7,6 +7,46 @@
     "%llds" : {
 
     },
+    "accessibility.toast.dismiss" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Click to dismiss"
+          }
+        }
+      }
+    },
+    "accessibility.toast.error" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Error"
+          }
+        }
+      }
+    },
+    "accessibility.toast.info" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Information"
+          }
+        }
+      }
+    },
+    "accessibility.toast.success" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Success"
+          }
+        }
+      }
+    },
     "alert.info" : {
       "localizations" : {
         "ar" : {
@@ -19222,6 +19262,36 @@
     },
     "Steam and Chromium-based launchers require en_US locale to avoid steamwebhelper crashes" : {
 
+    },
+    "status.launched %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Launched: %@"
+          }
+        }
+      }
+    },
+    "status.launchedTerminal %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Launched in Terminal: %@"
+          }
+        }
+      }
+    },
+    "status.launchFailed %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Launch failed: %@"
+          }
+        }
+      }
     },
     "tab.config" : {
       "localizations" : {
