feat: complete UI/UX improvements (Refs #49)
- Add archive progress indicator with toast notifications (upstream #827)
- Improve unavailable bottles UX with warning icon and quick remove (upstream #1039)
- Add IconCache for faster program icon loading (upstream #941)
- Add IconCacheTests with 5 tests

--- a/Whisky/Localizable.xcstrings
+++ b/Whisky/Localizable.xcstrings
@@ -2307,6 +2307,16 @@
         }
       }
     },
+    "button.removeFromList.help": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Remove this unavailable bottle from the list"
+          }
+        }
+      }
+    },
     "button.rename": {
       "localizations": {
         "ar": {
@@ -19513,6 +19523,26 @@
           "stringUnit": {
             "state": "translated",
             "value": "Launch failed: %@"
+          }
+        }
+      }
+    },
+    "status.exportSuccess %@": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Exported: %@"
+          }
+        }
+      }
+    },
+    "status.exportFailed %@": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Export failed: %@"
           }
         }
       }
