feat: Add ClickOnceManager and comprehensive unit tests for ProcessRegistry, TempFileTracker, and ClipboardManager
- Implement ClickOnceManager for ClickOnce application detection and management
  - Add detectAppRefFile() to scan for .appref-ms files in bottles
  - Add parseManifest() to extract app metadata from .appref-ms files
  - Add getEnvironment() to generate ClickOnce-specific environment variables
  - Add install() and validateManifest() for app installation
  - Add ClickOnceError enum for error handling

- Add ProcessRegistryTests with comprehensive test coverage
  - Test process registration and unregistration
  - Test PID updates and querying
  - Test cleanup mechanisms (graceful and force)
  - Test thread safety with concurrent operations
  - Test ProcessInfo equality and hashing

- Add TempFileTrackerTests with comprehensive test coverage
  - Test temp file registration and tracking
  - Test cleanup with retry mechanism
  - Test file lock detection and handling
  - Test cleanup of old files
  - Test thread safety with concurrent operations
  - Test TempFileInfo equality and hashing

- Add ClipboardManagerTests with comprehensive test coverage
  - Test clipboard content querying (empty, text, image, other)
  - Test size calculation and large content detection
  - Test clipboard clearing
  - Test ClipboardContent size calculations
  - Test edge cases (empty string, Unicode, multiple types)

- Update AppDelegate to integrate ProcessRegistry and TempFileTracker
  - Add automatic cleanup of Wine processes on app termination
  - Add automatic cleanup of old temp files on app termination

- Update LauncherDetection to add usesClipboard property
  - Mark Steam, Epic Games, and Battle.net as clipboard-using launchers

- Update Wine to support Bottle parameter in runProcess
  - Pass bottle context to process logging

- Update Localizable.xcstrings with new localization keys

This commit addresses issue #50 requirements for:
- Wine process cleanup automation
- Te

--- a/Whisky/Localizable.xcstrings
+++ b/Whisky/Localizable.xcstrings
@@ -6057,6 +6057,66 @@
         "zh-Hant": {
           "stringUnit": {
             "state": "translated",
+            "value": "Metal HUD"
+          }
+        }
+      }
+    },
+    "clipboard.warning.title": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Large Clipboard Content Detected"
+          }
+        }
+      }
+    },
+    "clipboard.warning.message": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Your clipboard contains %@ of data, which may cause freezes when launching multiplayer games. Clear the clipboard to prevent potential issues?"
+          }
+        }
+      }
+    },
+    "clipboard.warning.clear": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Clear Clipboard"
+          }
+        }
+      }
+    },
+    "clipboard.warning.cancel": {
+      "localizations": {
+        "en": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Launch Anyway"
+          }
+        }
+      }
+    },
+        "vi": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Metal HUD"
+          }
+        },
+        "zh-Hans": {
+          "stringUnit": {
+            "state": "translated",
+            "value": "Metal HUD"
+          }
+        },
+        "zh-Hant": {
+          "stringUnit": {
+            "state": "translated",
             "value": "Metal 抬頭顯示"
           }
         }
